<resources>
    <string name="app_name">ProjectLoveMyPlanet</string>
    <string name="ACCEDER">ACCEDER</string>
    <string name="txtTituloCrearCuenta">Crear Cuenta</string>
    <string name="Voluntario">Voluntario</string>
    <string name="Auspiciador">Auspiciador</string>
    <string name="OlvidasteContraseña">¿Olvidaste tu contraseña?</string>
    <string name="politica_privacidad">Al crear una cuenta accedes a nuestros Términos y Pólitica  de Privacidad</string>
    <string name="button_reg_vol">CREAR CUENTA</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_registrar_actividad">Registar Actividad</string>
    <string name="menu_listar_actividad">Listar Actividad</string>
    <string name="menu_canjear">Canje de Puntos</string>
    <string name="menu_suscribir_actividad">Suscribirse en Actividad</string>
    <string name="menu_main">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>