<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_registrar_actividades"
            android:icon="@drawable/ic_menu_camera"
            android:title= "@string/menu_registrar_actividad"/>
        <item
            android:id="@+id/nav_listar_actividades"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_listar_actividad" />
        <item
            android:id="@+id/nav_suscribir_actividad"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_suscribir_actividad" />
        <item
            android:id="@+id/nav_canjear"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_canjear" />

    </group>
</menu>