<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_main">
    <fragment
        android:id="@+id/nav_canjear"
        android:name="dev.frankperez.projectlovemyplanet.ui.fragments.CanjearFragment"
        android:label="@string/menu_canjear"
        tools:layout="@layout/fragment_canjear" />
    <fragment
        android:id="@+id/nav_main"
        android:name="dev.frankperez.projectlovemyplanet.ui.fragments.MainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/nav_suscribir_actividad"
        android:name="dev.frankperez.projectlovemyplanet.ui.fragments.SuscribirActividadFragment"
        android:label="@string/menu_suscribir_actividad"
        tools:layout="@layout/fragment_suscribir_actividad" />
    <fragment
        android:id="@+id/nav_listar_actividades"
        android:name="dev.frankperez.projectlovemyplanet.ui.fragments.ListadoActividadesFragment"
        android:label="@string/menu_listar_actividad"
        tools:layout="@layout/fragment_listado_actividades" />
    <fragment
        android:id="@+id/nav_registrar_actividades"
        android:name="dev.frankperez.projectlovemyplanet.ui.fragments.RegistroActividadesFragment"
        android:label="@string/menu_registrar_actividad"
        tools:layout="@layout/fragment_registro_actividades" />
</navigation>