<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="310dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.019" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="310dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <Button
        android:id="@+id/button"
        android:layout_width="310dp"
        android:layout_height="44dp"
        android:text="@string/ACCEDER"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/txtTituloCrearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtTituloCrearCuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/btnOlvidastesContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OlvidasteContraseña"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloCrearCuenta"
        app:layout_constraintVertical_bias="0.396" />

    <TextView
        android:id="@+id/btnCrearCuentaVoluntario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Voluntario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCrearCuentaAuspiciador"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloCrearCuenta"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/btnCrearCuentaAuspiciador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Auspiciador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloCrearCuenta"
        app:layout_constraintVertical_bias="0.112" />
</androidx.constraintlayout.widget.ConstraintLayout>