<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/mEditTextPassword"
        android:layout_width="310dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mEditTextEmail"
        app:layout_constraintVertical_bias="0.019" />

    <EditText
        android:id="@+id/mEditTextEmail"
        android:layout_width="310dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <Button
        android:id="@+id/mButtonAcceder"
        android:layout_width="310dp"
        android:layout_height="44dp"
        android:text="@string/ACCEDER"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mEditTextPassword"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/txtTituloCrearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtTituloCrearCuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mButtonAcceder"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/btnOlvidastesContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OlvidasteContraseña"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloCrearCuenta"
        app:layout_constraintVertical_bias="0.396" />

    <TextView
        android:id="@+id/mButtonVoluntario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Voluntario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mButtonAuspiciador"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloCrearCuenta"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/mButtonAuspiciador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToRegisterAuspiciador"
        android:text="@string/Auspiciador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloCrearCuenta"
        app:layout_constraintVertical_bias="0.112"
        tools:ignore="OnClick" />

    <RadioGroup
        android:layout_width="244dp"
        android:layout_height="71dp"
        android:layout_marginStart="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/mEditTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rbAuspiciador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Auspiciador"
            tools:layout_editor_absoluteX="75dp"
            tools:layout_editor_absoluteY="131dp" />

        <RadioButton
            android:id="@+id/rbVoluntario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Voluntario"
            tools:layout_editor_absoluteX="75dp"
            tools:layout_editor_absoluteY="131dp" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>